sidux-irc (0.5.3) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * remove artwork.
  * remove skel preseeding.
  * rework debian/copyright to be machine readable.
  * add new artwork from the sidux-art team.
  * add create-icons target in debian/rules.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 21 Jan 2008 18:01:39 +0100

sidux-irc (0.5.2) unstable; urgency=low

  * update to debhelper compat 6.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 19 Jan 2008 02:32:10 +0100

sidux-irc (0.5.1) unstable; urgency=low

  * drop bogus recommends on sidux-xdg.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 Jan 2008 19:53:07 +0100

sidux-irc (0.5.0) unstable; urgency=low

  * move desktop file into standard XDG hierarchy.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 07 Jan 2008 21:12:14 +0100

sidux-irc (0.4.5) unstable; urgency=low

  * Translation thanks to RoEn

 -- Joaquim Boura <x-un-i@sidux.com>  Tue, 18 Dec 2007 13:24:51 +0100

sidux-irc (0.4.4) unstable; urgency=low

  * update to Standards-Version 3.7.3, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 14:57:43 +0100

sidux-irc (0.4.3) unstable; urgency=low

  * bitchx is no more, remove all support for it.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 02 Dec 2007 00:41:47 +0100

sidux-irc (0.4.2) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * add VCS control headers.
  * update syntax for Vcs headers in debian/control

  [ Kel Modderman ]
  * Update debian menu section as per new subpolicy.

 -- Kel Modderman <kel@otaku42.de>  Thu, 25 Oct 2007 22:12:04 +1000

sidux-irc (0.4.1) unstable; urgency=low

  * fix debian menu entry.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 07 Jul 2007 14:04:29 +0200

sidux-irc (0.4.0) unstable; urgency=low

  * switch to ssft.
  * clean up sidux-irc.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 07 Jul 2007 00:48:57 +0200

sidux-irc (0.3.16) unstable; urgency=low

  * fix zenity veriable.