@@ -4,6 +4,15 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 
 create-icons::
 	# requires inkscape and imagemagick to be installed
+	@if [ ! -x /usr/bin/convert ]; then \
+		echo "ERROR: imagemagick not installed!" ; \
+		false ; \
+	fi
+	@if [ ! -x /usr/bin/inkscape ]; then \
+		echo "ERROR: inkscape not installed!" ; \
+		false ; \
+	fi
+	
 	# create XDG compatible icons from SVG
 	for i in 16 22 32 48 64 128; do \
 		mkdir -p "icons/hicolor/$${i}x$${i}/apps" ; \
