@@ -1,0 +1,159 @@
+/* XPM */
+static char *sidux-irc-16[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 137 2",
+"   c black",
+".  c gray2",
+"X  c #05060B",
+"o  c #05080B",
+"O  c #070A0C",
+"+  c #090A0A",
+"@  c #0B0B0B",
+"#  c #0A0A0C",
+"$  c #0E0E0E",
+"%  c gray6",
+"&  c #0D1014",
+"*  c #0E1317",
+"=  c #0C131A",
+"-  c #131313",
+";  c #131416",
+":  c #171818",
+">  c gray12",
+",  c #121A25",
+"<  c #16212A",
+"1  c #1C2022",
+"2  c #1D2227",
+"3  c #162332",
+"4  c #182531",
+"5  c #1B2833",
+"6  c #1D2A39",
+"7  c #1D2C3C",
+"8  c #232728",
+"9  c #252829",
+"0  c #282828",
+"q  c gray16",
+"w  c #292A2A",
+"e  c #2F2F2F",
+"r  c #212C3B",
+"t  c gray19",
+"y  c #313131",
+"u  c gray23",
+"i  c #3C3C3C",
+"p  c #253343",
+"a  c #243C4E",
+"s  c #2B3A49",
+"d  c #2C3B4D",
+"f  c #273D54",
+"g  c #2A3F5A",
+"h  c #363D42",
+"j  c #2A475A",
+"k  c #2C435F",
+"l  c #3A464D",
+"z  c #324356",
+"x  c #324856",
+"c  c #254B65",
+"v  c #264D66",
+"b  c #2F4664",
+"n  c #364963",
+"m  c #324C6A",
+"M  c #355172",
+"N  c #375170",
+"B  c gray25",
+"V  c gray26",
+"C  c gray30",
+"Z  c gray31",
+"A  c #484D54",
+"S  c #515151",
+"D  c #565759",
+"F  c gray36",
+"G  c #5D5D5D",
+"H  c gray38",
+"J  c gray39",
+"K  c #646464",
+"L  c #65696C",
+"P  c #6A6A6A",
+"I  c gray44",
+"U  c #767676",
+"Y  c gray47",
+"T  c gray48",
+"R  c #7B7B7B",
+"E  c #818181",
+"W  c #868686",
+"Q  c #868687",
+"!  c gray53",
+"~  c #888888",
+"^  c gray54",
+"/  c gray55",
+"(  c gray56",
+")  c gray57",
+"_  c gray59",
+"`  c #9B9B9B",
+"'  c #9D9D9D",
+"]  c gray62",
+"[  c #9F9F9F",
+"{  c #A2A2A2",
+"}  c gray64",
+"|  c gray65",
+" . c gray66",
+".. c #AAAAAA",
+"X. c #AFAFAF",
+"o. c gray69",
+"O. c #B2B2B2",
+"+. c gray70",
+"@. c #B6B6B6",
+"#. c #B9B9B9",
+"$. c #BBBBBB",
+"%. c gray74",
+"&. c gray",
+"*. c gray75",
+"=. c #C3C3C3",
+"-. c gray77",
+";. c #C5C5C5",
+":. c #C6C6C6",
+">. c gray78",
+",. c #C8C8C8",
+"<. c #CACACA",
+"1. c #CACBCB",
+"2. c gray80",
+"3. c #CDCDCD",
+"4. c #CECECE",
+"5. c gray81",
+"6. c gray82",
+"7. c #D2D2D2",
+"8. c LightGray",
+"9. c #D5D5D5",
+"0. c #D8D8D8",
+"q. c gray85",
+"w. c #DADADA",
+"e. c gainsboro",
+"r. c gray87",
+"t. c gray88",
+"y. c #E1E1E1",
+"u. c #E2E2E2",
+"i. c gray90",
+"p. c #E6E6E6",
+"a. c #E7E7E7",
+"s. c gray91",
+"d. c #E9E9E9",
+"f. c #ECECEC",
+"g. c gray93",
+"h. c gray100",
+"j. c None",
+/* pixels */
+"j.j.j.j.j.j.          j.j.j.j.j.",
+"j.j.j.j.  F ( X.#.X.) P @ j.j.j.",
+"j.j.  u } =.9.p.d.d.p.u.<.Z   j.",
+"j.  V ' } r.g.g.d.u.u.u.d.X.q j.",
+"j.$ E ^ [ p.p.u.7.;.2.9.u.X.C   ",
+"  V U U ' r.r.2.` ^ R Y W ( K   ",
+"  u H H Y 8.7.7.7.8.2.=.^ F e   ",
+"  y C C Z } <.2.2.2.2.2.;.H @   ",
+"  . ; 1 9 9 C ) ..+.%.$.=...:   ",
+"  O 5 f l L x v v j ~ ;.;.+.> X ",
+"    * < h 7.<.+.} ..<.2.<.[ 2 3 ",
+"j.      q 9.u.p.p.u.9.8.%.D r j.",
+"j.  y   - P ` #.<.;.X._ A d j.j.",
+"$ q # o = , 6 p s z n N f j.j.j.",
+"& b N m 7     4 k g j.j.j.j.j.j.",
+"j.j.j.j.j.j.j.j.j.j.j.j.j.j.j.j."
+};
