@@ -1,0 +1,130 @@
+/* XPM */
+static char *sidux-irc[] = {
+/* columns rows colors chars-per-pixel */
+"32 32 92 1",
+"  c #000000",
+". c #040608",
+"X c #060A0D",
+"o c #0A0B0C",
+"O c #0B0D10",
+"+ c #0C1015",
+"@ c #0D141B",
+"# c #131313",
+"$ c #10171C",
+"% c #191919",
+"& c #141D26",
+"* c #141E2A",
+"= c #191E22",
+"- c #16202B",
+"; c #19242E",
+": c #172331",
+"> c #1A2734",
+", c #1B2833",
+"< c #1C2A3B",
+"1 c #232424",
+"2 c #272829",
+"3 c #2B2B2B",
+"4 c #252B33",
+"5 c #202F3B",
+"6 c #292F37",
+"7 c #2E343C",
+"8 c #323232",
+"9 c #31353B",
+"0 c #373C3F",
+"q c #3C3C3C",
+"w c #1E2F41",
+"e c #1E3441",
+"r c #1B3A4E",
+"t c #223343",
+"y c #23354A",
+"u c #243A4E",
+"i c #2F3946",
+"p c #2B3B4A",
+"a c #263B52",
+"s c #2D3E52",
+"d c #323B47",
+"f c #383D42",
+"g c #16435F",
+"h c #18405B",
+"j c #164564",
+"k c #1D4965",
+"l c #2A404F",
+"z c #254459",
+"x c #2A435C",
+"c c #28485E",
+"v c #35424B",
+"b c #344352",
+"n c #354B5A",
+"m c #394757",
+"M c #394A55",
+"N c #2E4461",
+"B c #304967",
+"V c #334C6C",
+"C c #344F70",
+"Z c #365172",
+"A c #3E5571",
+"S c #3A5779",
+"D c #3A597C",
+"F c #444444",
+"G c #40484E",
+"H c #494949",
+"J c #525252",
+"K c #5B5B5C",
+"L c #646464",
+"P c #6B6B6B",
+"I c #727272",
+"U c #7B7B7B",
+"Y c #3F5E84",
+"T c #41628A",
+"R c #476C98",
+"E c #848484",
+"W c #8C8C8C",
+"Q c #939393",
+"! c #9B9B9B",
+"~ c #A4A4A4",
+"^ c #AAAAAA",
+"/ c #B4B4B4",
+"( c #BBBBBB",
+") c #C3C3C3",
+"_ c #CCCCCC",
+"` c #D3D3D3",
+"' c #DBDBDB",
+"] c #E3E3E3",
+"[ c #EBEBEB",
+"{ c #F0F0F0",
+"} c gray100",
+"| c None",
+/* pixels */
+"||||||||||||||||||||||||||||||||",
+"|||||||||||||        |||||||||||",
+"||||||||||   J!^((/QL1  ||||||||",
+"||||||||  F!)_)_______(P#.||||||",
+"||||||  H()()`]]][[[[]]')P88||||",
+"|||||  I(/(_[{[{{[[[]][]][^2 |||",
+"|||| #Q^~^([[[[[[[]]]]]]][`P  ||",
+"||| .!!!~^][[[[[[]]']]]'][_^J ||",
+"||  LQWQQ^][[][]'`_``']][])!E  |",
+"|| %WEEEW/]]]]]'^~~!~~~/_`)QE8 |",
+"|  LUUUUE(']']')QEUIUUEEQ!!WIK  ",
+"| #UPIIIU^'']`__)^!WUUIPPIEEPK  ",
+"| 8PLLLLPQ'```````'`_(^WULLLLH  ",
+"| 8KKKKKKE)_`__`_`'`'`'`)WPF%   ",
+"  1JJJJJJKW______`````_```I1.   ",
+"  #HHHHHFFLW/_`_______))(_)H=   ",
+"   o%138qFqJPW^()))))((/(__E2   ",
+"| XXOX. ..   #1qHKLQ~))((__!8   ",
+"| +-,5uzcqvbkjjjgr5vH~))(__^q  X",
+"|  $;5tlvJ/WKMMmnnbu0())))_!0.@,",
+"|   @-,&5H```)^QULPQ/___))_E3&*|",
+"||   o++%H`'''']''''```_))_L4>@|",
+"||      .H'']]][]]]''``___Eqt;||",
+"|||     .F'']][[[[]]''`_)Wqiw|||",
+"||||.#  .qLQ(`[{[[]]''_WJqd*||||",
+"||| H3   O%1288qJPIKH88qbs |||||",
+"|||3q. .X@@&*;44779iibAYa ||||||",
+" %KfO@-<yywtxNNVCSYRRTB ||||||||",
+" mDTTYDVuO  @uNBVCV> |||||||||||",
+"||||||||||||||||||||||||||||||||",
+"||||||||||||||||||||||||||||||||",
+"||||||||||||||||||||||||||||||||"
+};
