@@ -6,8 +6,10 @@ sidux-irc (0.5.3) UNRELEASED; urgency=low
   * rework debian/copyright to be machine readable.
   * add new artwork from the sidux-art team.
   * add create-icons target in debian/rules.
+  * add dependency checks for create-icons.
+  * create icons.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 21 Jan 2008 18:01:39 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 21 Jan 2008 18:17:18 +0100
 
 sidux-irc (0.5.2) unstable; urgency=low
 
